--- a/README
+++ b/README
@@ -3,6 +3,8 @@ Basically https://github.com/AndrewLien/Vegas_Events_API but in Golang
 API that scrapes https://electronic.vegas/vegas-edm-event-calendar/ and returns
 Vegas EDM events by dates specified in the request
 
+Caveat: Not fully functional
+
 Additional features
     Check twitter for profile picture if applicable?
 
