--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Basically https://github.com/AndrewLien/Vegas_Events_API but in Golang
 API that scrapes https://electronic.vegas/vegas-edm-event-calendar/ and returns
 Vegas EDM events by dates specified in the request
 
-Caveat: Not fully functional
+Caveat: Not fully functional, will scrape and parse, but functionality for saving to mongodb is lacking
 
 Additional features
     Check twitter for profile picture if applicable?
